found form overflow bug on ipad, now fixed - also made error sticky (not 404) bigger with smaller font

--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -92,6 +92,9 @@ body {
 // error sticky
 .error {
   @include centered-sticky;
+  height: 35vw;
+  width: 35vw;
+  font-size: 6vmin;
 }
 
 // loading animation
