--- a/src/sass/_postForm.scss
+++ b/src/sass/_postForm.scss
@@ -18,27 +18,29 @@
         font-family: 'Permanent Marker', cursive;
         font-size: 4.5vw;
         background-color: $accent-color;
-        width: calc(100% - 40px);
+        width: 80%;
+        // width: calc(100% - 40px);
 
         @include mobile{
           font-size: 8vw;
           margin: 2.2vw auto;
 
           // fixes mobile overflow bug
-          width: 80%;
+          // width: 80%;
         }
       }
 
       button {
         // fix padding bug
-        width: calc(100% - 34px);
+        width: 70%;
+        // width: calc(100% - 34px);
         border-width: 2px;
         border-color: #ffffff #2d2d2d #2d2d2d #ffffff ;
 
         @include mobile{
           // matches width of inputs
           // on my phone but not browswer imitating phone
-          width: 89%;
+          width: 70%;
         }
       }
 
